# hft-gateway

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  FILE_STRUCTURE.md  README.md
src/: client.cpp  client.h  connection.cpp  connection.h  main.cpp  message.cpp  message.h  server.cpp  server.h  socket_utils.cpp  ui.cpp  ui.h
src/client/: client.cpp  client.h
src/network/: connection.h  message.cpp  message.h  socket_utils.cpp  socket_utils.h
src/server/: server.cpp  server.h
src/ui/: ui.cpp  ui.h
